# Flux2-from-scratch

./: .gitignore  LICENSE  README.md  autoencoder.py  model.py  pyproject.toml  requirements.txt  sampling.py  utils.py
data/: filter.py  grid_image.py  prepare.py  processing_data.py  utils.py
flux/models/: sampling.py  text_encoder.py
flux/utils/: __init__.py  utils.py
models/: model.py  sampling.py
test/: autoencoderflux2.ipynb
utils/: utils.py
